force-app/main/default/objects/Activity_Commission_Rule__c/Activity_Commission_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines activity-based commission rules and rate structures for an incentive plan.</description>
    <label>Activity Commission Rule</label>
    <nameField><label>Activity Commission Rule Name</label><type>Text</type></nameField>
    <pluralLabel>Activity Commission Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>