force-app/main/default/objects/Activity_Commission_Rule__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Qualified_Meeting</fullName><default>false</default><label>Qualified Meeting</label></value>
            <value><fullName>Qualified_Opportunity</fullName><default>false</default><label>Qualified Opportunity</label></value>
            <value><fullName>Call_Logged</fullName><default>false</default><label>Call Logged</label></value>
            <value><fullName>Demo_Completed</fullName><default>false</default><label>Demo Completed</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>