force-app/main/default/objects/Activity_Commission_Rule__c/fields/Cap_Count_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Cap_Count_Per_Period__c</fullName>
    <label>Cap Count Per Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>