force-app/main/default/objects/Activity_Commission_Rule__c/fields/Cap_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Cap_Per_Period__c</fullName>
    <label>Cap Per Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>