force-app/main/default/objects/Activity_Commission_Rule__c/fields/Counting_Method__c.field-meta.xml
<CustomField>
    <fullName>Counting_Method__c</fullName>
    <label>Counting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Count</fullName><default>false</default><label>Count</label></value>
            <value><fullName>Sum_Value</fullName><default>false</default><label>Sum Value</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>