force-app/main/default/objects/Activity_Commission_Rule__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>