force-app/main/default/objects/Activity_Commission_Rule__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Activity Rules</relationshipLabel>
    <relationshipName>Activity_Rules</relationshipName>
</CustomField>