force-app/main/default/objects/Activity_Commission_Rule__c/fields/Rate_Pct_Per_Activity__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pct_Per_Activity__c</fullName>
    <label>Rate Pct Per Activity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>