force-app/main/default/objects/Activity_Commission_Rule__c/fields/Rate_Per_Activity__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Activity__c</fullName>
    <label>Rate Per Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>